argocd-applications/media/prowlarr/prowlarr_resources/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - port: 9696
      name: http
